--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/sidjayisaok/Bamzon#readme",
   "dependencies": {
+    "cli-table": "^0.3.1",
     "inquirer": "^1.1.2",
     "mysql": "^2.11.1"
   }
